--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -360,7 +360,7 @@
                 Items: |-
                     =Filter(
                         'Divisions With Study',
-                        Title = "Created",'Perf Year'=VarCurrentYear.Value,
+                        'Perf Year'=VarCurrentYear.Value,
                         StartsWith(
                             'Study Name',
                             search_study.Text
