--- a/SHS-014-V/Src/Components/Component1.fx.yaml
+++ b/SHS-014-V/Src/Components/Component1.fx.yaml
@@ -351,22 +351,23 @@ Component1 As CanvasComponent:
 
             Circle1_7 As circle:
                 Fill: =ThisItem.color
-                Height: =48
+                Height: =60
                 OnSelect: =
-                Width: =44
+                Width: =60
                 X: =35
                 Y: =32
                 ZIndex: =1
 
             Label6_6 As label:
                 Color: =RGBA(255, 255, 255, 1)
-                FontWeight: =FontWeight.Semibold
-                Height: =48
+                FontWeight: =FontWeight.Bold
+                Height: =60
                 OnSelect: =Set(ShowMenuadmin, !ShowMenuadmin)
-                Size: =15
+                PaddingLeft: =7
+                Size: =20
                 Text: =ThisItem.Title
-                Width: =39
-                X: =40
+                Width: =38
+                X: =45
                 Y: =32
                 ZIndex: =2
 
