--- a/SHS-014-V/Src/Components/Component1.fx.yaml
+++ b/SHS-014-V/Src/Components/Component1.fx.yaml
@@ -359,15 +359,17 @@ Component1 As CanvasComponent:
                 ZIndex: =1
 
             Label6_6 As label:
+                Align: =Align.Center
                 Color: =RGBA(255, 255, 255, 1)
                 FontWeight: =FontWeight.Bold
                 Height: =60
                 OnSelect: =Set(ShowMenuadmin, !ShowMenuadmin)
-                PaddingLeft: =7
+                PaddingLeft: =2
+                PaddingTop: =3
                 Size: =20
                 Text: =ThisItem.Title
-                Width: =38
-                X: =45
+                Width: =60
+                X: =35
                 Y: =32
                 ZIndex: =2
 
