--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -523,7 +523,6 @@
         Height: =App.Height-'compForChampionAction(C)'.ComHeaderHeight
         LayoutDirection: =LayoutDirection.Vertical
         LayoutMode: =LayoutMode.Auto
-        Visible: =ShowActionpage
         Width: =App.Width-'compForChampionAction(C)'.VarMenuWidth
         X: ='compForChampionAction(C)'.VarMenuWidth
         Y: ='compForChampionAction(C)'.ComHeaderHeight
@@ -800,6 +799,11 @@
                 Checkbox2 As checkbox:
                     FillPortions: =1
                     LayoutMinWidth: =50
+                    OnSelect: |-
+                        =ForAll(
+                            Filter(Gallery_study_3.AllItems,Checkbox2_3.Value=true),
+                            Collect(ValueofId,ThisRecord.ID)
+                        );
                     Text: =""
                     ZIndex: =1
 
@@ -1020,6 +1024,7 @@
                         Default: =Checkbox2.Value
                         LayoutMinWidth: =50
                         OnCheck: =Collect(ValueofId,ThisItem.ID)
+                        Reset: =ResetCheckbox
                         Text: =""
                         Width: =50
                         ZIndex: =1
@@ -3239,9 +3244,21 @@
         Button5 As button:
             Height: =57
             OnSelect: |-
-                =ApprovalFlowforChampionPage.Run(JSON(ValueofId),Gallery_study_2.Selected.ID,TextInput3.Text);
-                UpdateContext({SendforApproval:false}); Notify("The study is send for admin review successfully",NotificationType.Success);
+                =UpdateContext({ResetCheckbox: false});
+                ApprovalFlowforChampionPage.Run(
+                    JSON(ValueofId),
+                    Gallery_study_2.Selected.ID,
+                    TextInput3.Text
+                );
+                UpdateContext({SendforApproval: false});
+                Notify(
+                    "The study is send for admin review successfully",
+                    NotificationType.Success
+                );
                 Clear(ValueofId);
+                Reset(Checkbox2);
+                UpdateContext({ResetCheckbox: true});
+                UpdateContext({SendforApproval: false})
             Text: ="Confirm"
             Width: =210
             X: =832
